--- a/src/app/pool-stats/pool-stats.component.html
+++ b/src/app/pool-stats/pool-stats.component.html
@@ -33,59 +33,72 @@
     <tr *ngFor="let miner of getSortedMiners(pool)">
       <td><a href="{{pool.url}}" target="_blank">{{pool.name}}</a></td>
       <td (click)="toggleShowDetails(pool.name, miner.payoutAddress)">
-        <span *ngIf="isMinerCheating(pool, miner)" ngbTooltip="Cheater">
-          <fa-icon [icon]="faExclamationTriangle" style="color: orange;"></fa-icon>
-        </span>
-        <span *ngIf="miner.ec > 0 && miner.isDeprecatedEndpoint" style="padding-right: 4px" ngbTooltip="You are using a deprecated mining url!">
-          <fa-icon [icon]="faExclamationTriangle" style="color: orangered;"></fa-icon>
-        </span>
         <span *ngIf="miner.ec > 0 && !miner.isDeprecatedEndpoint && miner.connection === 'http'" style="padding-right: 4px" ngbTooltip="You are using http polling which hurts the pools performance, consider using Foxy-Miner or Foxy-Proxy">
           <fa-icon [icon]="faExclamationTriangle" style="color: orange;"></fa-icon>
         </span>
-        <span class="dot" *ngIf="!isMinerCheating(pool, miner)" ngbTooltip="{{getMinerOnlineTooltip(miner.online)}}"
+        <span class="dot" *ngIf="miner.online !== undefined" ngbTooltip="{{getMinerOnlineTooltip(miner.online)}}"
               [attr.positive]="miner.online === 1 ? true : null"
               [attr.intermediary]="miner.online === 2 ? true : null"
               [attr.investor]="miner.online === 3 ? true : null"
               [attr.negative]="miner.online === 0 ? true : null">
         </span>
-        {{miner.accountName || miner.payoutAddress}}
+        <span class="dot" *ngIf="miner.online === undefined" ngbTooltip="{{getMinerOnlineTooltip(getAccountState(pool, miner))}}"
+              [attr.positive]="getAccountState(pool, miner) === 1 ? true : null"
+              [attr.intermediary]="getAccountState(pool, miner) === 2 ? true : null"
+              [attr.investor]="getAccountState(pool, miner) === 3 ? true : null"
+              [attr.negative]="getAccountState(pool, miner) === 0 ? true : null">
+        </span>
+        {{miner.accountName || miner.name || miner.payoutAddress}}
         <span *ngIf="shouldShowDetails(pool.name, miner.payoutAddress)">
-          <span *ngFor="let machine of miner.machines">
-            <br>
-            &nbsp;<span class="dot" ngbTooltip="{{getMinerOnlineTooltip(getMachineState(pool, machine))}}"
-                      [attr.positive]="getMachineState(pool, machine) === 1 ? true : null"
-                      [attr.intermediary]="getMachineState(pool, machine) === 2 ? true : null"
-                      [attr.negative]="getMachineState(pool, machine) === 0 ? true : null">
+          <span *ngIf="miner.machines">
+            <span *ngFor="let machine of miner.machines">
+              <br>
+              &nbsp;<span class="dot" ngbTooltip="{{getMinerOnlineTooltip(getMachineState(pool, machine))}}"
+                          [attr.positive]="getMachineState(pool, machine) === 1 ? true : null"
+                          [attr.intermediary]="getMachineState(pool, machine) === 2 ? true : null"
+                          [attr.negative]="getMachineState(pool, machine) === 0 ? true : null">
+              </span>
+                {{getMachineName(machine)}}: {{getFormattedCapacity(machine.reportedCapacity)}}
             </span>
-            {{getMachineName(machine)}}: {{getFormattedCapacity(machine.reportedCapacity)}}
+          </span>
+          <span *ngIf="miner.miner">
+            <span *ngFor="let machine of miner.miner">
+              <br>
+              &nbsp;<span class="dot" ngbTooltip="{{getMinerOnlineTooltip(getMachineState(pool, machine))}}"
+                          [attr.positive]="getMachineState(pool, machine) === 1 ? true : null"
+                          [attr.intermediary]="getMachineState(pool, machine) === 2 ? true : null"
+                          [attr.negative]="getMachineState(pool, machine) === 0 ? true : null">
+              </span>
+              {{getMachineName(machine)}}: {{getFormattedCapacity(machine.reportedCapacity)}}
+            </span>
           </span>
         </span>
       </td>
-      <td (click)="toggleShowDetails(pool.name, miner.payoutAddress)">{{miner.pending.toFixed(8)}} {{pool.poolConfig.symbol}}</td>
-      <td (click)="toggleShowDetails(pool.name, miner.payoutAddress)">{{(miner.historicalShare * 100).toFixed(4)}}%</td>
-      <td (click)="toggleShowDetails(pool.name, miner.payoutAddress)" *ngIf="pool.poolConfig.supportsPledge">{{miner.pledge.toFixed(getPledgePrecision(pool))}} {{getPledgeUnit(pool)}}</td>
+      <td (click)="toggleShowDetails(pool.name, miner.payoutAddress)">{{getPending(miner)}} {{pool.poolConfig.symbol}}</td>
+      <td (click)="toggleShowDetails(pool.name, miner.payoutAddress)">{{((miner.ecShare || miner.historicalShare || 0) * 100).toFixed(4)}}%</td>
+      <td (click)="toggleShowDetails(pool.name, miner.payoutAddress)" *ngIf="pool.poolConfig.supportsPledge">{{getPledge(pool, miner)}} {{getPledgeUnit(pool)}}</td>
       <td (click)="toggleShowDetails(pool.name, miner.payoutAddress)" *ngIf="!pool.poolConfig.supportsPledge">N/A</td>
-      <td (click)="toggleShowDetails(pool.name, miner.payoutAddress)" *ngIf="pool.poolConfig.supportsPledge">{{(miner.historicalPledgeShare * 100).toFixed(4)}} %</td>
+      <td (click)="toggleShowDetails(pool.name, miner.payoutAddress)" *ngIf="pool.poolConfig.supportsPledge">{{((miner.pledgeShare || miner.historicalPledgeShare || 0) * 100).toFixed(4)}} %</td>
       <td (click)="toggleShowDetails(pool.name, miner.payoutAddress)" *ngIf="!pool.poolConfig.supportsPledge">N/A</td>
-      <td (click)="toggleShowDetails(pool.name, miner.payoutAddress)">{{miner.deadlineCount}}</td>
+      <td (click)="toggleShowDetails(pool.name, miner.payoutAddress)">{{miner.deadlines || miner.deadlineCount || 'N/A'}}</td>
       <td (click)="toggleShowDetails(pool.name, miner.payoutAddress)">{{getFormattedCapacity(miner.ec * 1024)}}</td>
       <td (click)="toggleShowDetails(pool.name, miner.payoutAddress)">{{getFormattedCapacityForMiner(miner)}}</td>
       <td (click)="toggleShowDetails(pool.name, miner.payoutAddress)">
         <span *ngIf="!!getLastPayout(pool, miner.payoutAddress)">
           <span *ngIf="pool.poolConfig.blockExplorerTxUrlTemplate">
-            <a href="{{getBlockExplorerTransactionLink(pool, getLasPayoutTxId(pool, miner.payoutAddress))}}" target="_blank">{{getLasPayoutDate(pool, miner.payoutAddress)}}</a>
+            <a href="{{getBlockExplorerTransactionLink(pool, getLastPayoutTxId(pool, miner.payoutAddress))}}" target="_blank">{{getLastPayoutDate(pool, miner.payoutAddress)}}</a>
           </span>
           <span *ngIf="!pool.poolConfig.blockExplorerTxUrlTemplate">
-            {{getLasPayoutDate(pool, miner.payoutAddress)}}
+            {{getLastPayoutDate(pool, miner.payoutAddress)}}
           </span>
-          ({{getLasPayoutAmount(pool, miner.payoutAddress)}} {{pool.poolConfig.symbol}})
+          ({{getLastPayoutAmount(pool, miner.payoutAddress)}} {{pool.poolConfig.symbol}})
         </span>
         <span *ngIf="!getLastPayout(pool, miner.payoutAddress)">
           N/A
         </span>
         <span *ngIf="shouldShowDetails(pool.name, miner.payoutAddress)">
           <br>
-          {{miner.minerSoftware || 'N/A'}}
+          {{miner.software || miner.minerSoftware || 'N/A'}}
         </span>
       </td>
       <td>
